wee trying html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<html>
+	<head>
+		<title>Janna Erin</title>
+	</head>
+
+	<body>
+		<h1>Wee homepage!</h1>
+
+		<h2>
+			Meow
+		</h2>
+
+	</body>
+</html>
