--- a/404.html
+++ b/404.html
@@ -2,6 +2,13 @@
 layout: page
 title: 404
 ---
-<p><font size ="10">Cats!</font></p>
+<style>
+	body {background-color:black}
+	p {color:white;
+		font-family:verdana;
+		font-size:300%;
+	}
+</style>
+<p>Cats!</p>
 <!--<img src="IMG_5319_2.jpg" alt ="Boots" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;">--><img src="zBjW9.jpg" alt ="Oops" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;"><p style="clear: both;">
 <p>This page doesn't exist...</p>
