--- a/404.html
+++ b/404.html
@@ -3,7 +3,11 @@ layout: page
 title: 404
 ---
 <style>
-	body {background-color:black}
+	body {background-color:black;
+		text-align:center;}
+	#mainContainer {
+		margin:0 auto;
+	}
 	p {color:white;
 		font-family:verdana;
 		font-size:300%;
@@ -11,4 +15,4 @@ title: 404
 </style>
 <p>Cats!</p>
 <!--<img src="IMG_5319_2.jpg" alt ="Boots" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;">--><img src="zBjW9.jpg" alt ="Oops" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;"><p style="clear: both;">
-<p>This page doesn't exist...</p>
+<p>This page doesn't exist.</p>
