--- a/404.html
+++ b/404.html
@@ -14,5 +14,5 @@ title: 404
 	}
 </style>
 <p>Cats!</p>
-<!--<img src="IMG_5319_2.jpg" alt ="Boots" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;">--><img src="zBjW9.jpg" alt ="Oops" style="float:left; width:30%; margin-right: 1%; margin-bottom: 0.5em;"><p style="clear: both;">
+<img src="zBjW9.jpg" alt ="Oops" style="width:304px;height:228px">
 <p>This page doesn't exist.</p>
