--- a/404.html
+++ b/404.html
@@ -14,5 +14,5 @@ title: 404
 	}
 </style>
 <p>Cats!</p>
-<img src="zBjW9.jpg" alt ="Oops" style="width:304px;height:228px">
+<img src="zBjW9.jpg" alt ="Oops" align="middle" style="width:304px;height:228px">
 <p>This page doesn't exist.</p>
