--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
 	<head>
-		<title>Janna Erin</title>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
+        <title>Janna Golden</title>
 	</head>
 
 	<body>
 		<h1>Wee homepage!</h1>
+		<A HREF="index.html"><IMG BORDER="0" HEIGHT="45" WIDTH="22" ALT="Boots" SRC="IMG_5319_2.jpg"></A>
 
 		<h2>
 			Meow.
