--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<body>
 		<h1>Wee homepage!</h1>
+		<img src="IMG_5319_2.jpg">
 		<A HREF="index.html"><IMG BORDER="0" HEIGHT="45" WIDTH="22" ALT="Boots" SRC="IMG_5319_2.jpg"></A>
 
 		<h2>
