--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 	<body>
 		<h1>Wee homepage!</h1>
-		<img src="IMG_5319_2.jpg">
-		<A HREF="index.html"><IMG BORDER="0" HEIGHT="45" WIDTH="22" ALT="Boots" SRC="IMG_5319_2.jpg"></A>
+		<A HREF="index.html"><IMG src="IMG_5319_2.jpg" border="0" height="45" width="22" alt="Boots"></A>
 
 		<h2>
 			Meow.
