--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ title: 404
 		margin:0 auto;
 	}
 	p {color:white;
-		font-family:verdana;
+		font-family:Open Sans;
 		font-size:300%;
 	}
 </style>
