--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 layout: page
 title: 404
 ---
+<head>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
+	</head>
 <style>
 	body {background-color:black;
 		text-align:center;}
@@ -9,7 +12,7 @@ title: 404
 		margin:0 auto;
 	}
 	p {color:white;
-		font-family:Open Sans;
+		font-family: 'Open Sans', sans-serif;
 		font-size:300%;
 	}
 </style>
