--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 	<head>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
         <title>Janna Golden</title>
 	</head>
-
+<style>
+	body {background-color:black;
+		text-align:center;}
+	#mainContainer {
+		margin:0 auto;
+	}
+	p {color:white;
+		font-family: 'Open Sans', sans-serif;
+		font-size:300%;
+	}
+</style>
 	<body>
-		<h1>Wee homepage!</h1>
+		<h1>Wee (JANNA GOLDEN'S) homepage!</h1>
 		<A HREF="404.html"><IMG src="IMG_5319_2.jpg" border="0" height="304" width="228" alt="Boots"></A>
 		<h2>
 			Meow.
