--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 	#mainContainer {
 		margin:0 auto;
 	}
-	p {color:white;
+	h1 {color:white;
 		font-family: 'Open Sans', sans-serif;
 		font-size:300%;
+	}
+	h2 {color:white;
+		font-family: 'Open Sans', sans-serif;
+		font-size:200%;
 	}
 </style>
 	<body>
