--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
 	}
 	h1 {color:white;
 		font-family: 'Open Sans', sans-serif;
-		font-size:300%;
+		font-size:200%;
 	}
 	h2 {color:white;
 		font-family: 'Open Sans', sans-serif;
 		font-size:200%;
 	}
+	h3 {color:white;
+		font-family: 'Open Sans', sans-serif;
+		font-size:100%;
+	}
 </style>
 	<body>
-		<h1>Wee (JANNA GOLDEN'S) homepage!</h1>
+		<h1>JANNA GOLDEN</h1>
+		<h2>Wee homepage!</h2>
 		<A HREF="404.html"><IMG src="IMG_5319_2.jpg" border="0" height="304" width="228" alt="Boots"></A>
-		<h2>
-			Meow.
-		</h2>
+		<h3>Meow.</h3>
 
 	</body>
 </html>
