--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
         <title>Janna Golden</title>
 	</head>
 <style>
-	body {background-color:black;
+	body {background-color:white;
 		text-align:center;}
 	#mainContainer {
 		margin:0 auto;
 	}
-	h1 {color:white;
+	h1 {color:black;
 		font-family: 'Open Sans', sans-serif;
 		font-size:200%;
 	}
-	h2 {color:white;
+	h2 {color:black;
 		font-family: 'Open Sans', sans-serif;
 		font-size:150%;
 	}
-	h3 {color:white;
+	h3 {color:black;
 		font-family: 'Open Sans', sans-serif;
 		font-size:100%;
 	}
