--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	#mainContainer {
 		margin:0 auto;
 	}
-	h1 {color:gray;
+	h1 {color:dimgray;
 		font-family: 'Open Sans', sans-serif;
 		font-size:200%;
 	}
-	h2 {color:gray;
+	h2 {color:dimgray;
 		font-family: 'Open Sans', sans-serif;
 		font-size:150%;
 	}
-	h3 {color:gray;
+	h3 {color:dimgray;
 		font-family: 'Open Sans', sans-serif;
 		font-size:100%;
 	}
