--- a/404.html
+++ b/404.html
@@ -17,5 +17,5 @@ title: 404
 	}
 </style>
 <p>Cats!</p>
-<img src="zBjW9.jpg" alt ="Oops" align="middle" style="width:304px;height:228px">
-<p>This page doesn't exist.</p>
+<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
+<p>This page doesn't exist (yet).</p>
