--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: page
 title: 404
 ---
 <head>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 	</head>
 <style>
 	body {background-color:black;
@@ -16,6 +16,8 @@ title: 404
 		font-size:300%;
 	}
 </style>
-<p>Cats!</p>
-<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
-<p>This page doesn't exist (yet).</p>
+<body>
+	<p>Cats!</p>
+	<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
+	<p>This page doesn't exist (yet).</p>
+</body>
