change fonts again2

--- a/404.html
+++ b/404.html
@@ -11,13 +11,17 @@ title: 404
 	#mainContainer {
 		margin:0 auto;
 	}
-	p {color:white;
+	h1 {color:white;
 		font-family: 'Open Sans', sans-serif;
 		font-size:300%;
 	}
+	h1 {color:white;
+		font-family: 'Open Sans', sans-serif;
+		font-size:200%;
+	}
 </style>
 <body>
-	<p>Cats!</p>
+	<h1>Cats!</h1>
 	<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
-	<p>This page doesn't exist (yet).</p>
+	<h2>This page doesn't exist (yet).</h2>
 </body>
