change fonts again3

--- a/404.html
+++ b/404.html
@@ -2,9 +2,10 @@
 layout: page
 title: 404
 ---
+<html>
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
-	</head>
+</head>
 <style>
 	body {background-color:black;
 		text-align:center;}
@@ -25,3 +26,4 @@ title: 404
 	<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
 	<h2>This page doesn't exist (yet).</h2>
 </body>
+</html>
