--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<body>
 		<h1>JANNA GOLDEN</h1>
 		<h2>Wee homepage!</h2>
-		<A HREF="404.html"><IMG src="IMG_5319_2.jpg" border="0" height="304" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Boots"></A>
+		<A HREF="404.html"><IMG src="IMG_5319_2.jpg" border="0" height="304" width="228"style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Boots"></A>
 		<A HREF="404.html"><IMG src="pizza.jpg" border="0"  height="228" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Pizza"></A>
-		<A HREF="404.html"><IMG src="DSC_1754.jpg" border="0" height="228" width="304"style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Berkeley"></A><p style="clear: both;">
+		<A HREF="404.html"><IMG src="DSC_1754.jpg" border="0" height="228" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Berkeley"></A><p style="clear: both;">
 		<h3>Meow.</h3>
 
 	</body>
