--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
 		<h2>Wee homepage!</h2>
 
-		<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" width = "304" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
+		<div class="blur pic">
+			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" width = "304" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
+		</div>
 
 		<A HREF="404.html"><IMG src="DSC_1754.jpg" align="middle" border="0" height="228" width = "304" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
 
