--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<h1>JANNA GOLDEN</h1>
 
-		<h2>Wee homepage!</h2>
+		<h2>Wee homepage!!</h2>
 
 		<div class="blur pic">
 			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" width = "304" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
