--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ title: 404
 <head>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 </head>
-<style>
+<!--<style>
 	body {background-color:black;
 		text-align:center;}
 	#mainContainer {
@@ -20,8 +20,9 @@ title: 404
 		font-family: 'Open Sans', sans-serif;
 		font-size:200%;
 	}
-</style>
+</style>-->
 <body>
+	<link rel="stylesheet" href="style.css">
 	<h1>Cats!</h1>
 	<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
 	<h2>This page doesn't exist (yet).</h2>
