--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
         <title>Janna Golden</title>
 	</head>
-<style>
+<!--<style>
 	body {background-color:white;
 		text-align:center;}
 	#mainContainer {
@@ -23,8 +23,9 @@
 		font-family: 'Open Sans', sans-serif;
 		font-size:100%;
 	}
-</style>
+</style>-->
 <body>
+	<link rel="stylesheet" href="style.css">
 	<h1>About Me.</h1>
 </body>
 </html>
