change boots pic

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<p style="clear: both;">
 
 
-		<A HREF="404.html"><IMG src="IMG_5319_2.jpg" align="middle" border="0" height="202.667" width="152" alt="Boots"></A><p style="clear: both;">
+		<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 
 		<h3>Meow.</h3>
 
