--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 		
 		<p style="clear: both;">
 
-		<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
+		<div class="blur pic">
+			<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
+		</div>
 
 		<h3>Meow.</h3>
 
