--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		<h2>Wee homepage!</h2>
 
 		<div class="blur pic">
-			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" width = "300" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
+			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" alt="Me!" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
 		</div>
 
-		<A HREF="404.html"><IMG src="DSC_1754.jpg" align="middle" border="0" height="228" width = "300" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
+		<A HREF="404.html"><IMG src="DSC_1754.jpg" align="middle" border="0" height="228" alt="Berkeley" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
 
 		<A HREF="404.html"><IMG src="pizza.jpg" align="middle" border="0"  height="228" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Pizza"></A>
 		
@@ -44,7 +44,7 @@
 			<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 		</div>
 
-		<h3>Meow.</h3>
+		<h3>Meow</h3>
 
 	</body>
 </html>
