--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 		</div>
 
-		<h3>Meow</h3>
+		<h3>Meow.</h3>
 
 	</body>
 </html>
