--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
 		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/><!--chrome=1-->
         <title>Janna Golden</title>
 	</head>
 <!--<style>
@@ -30,7 +30,27 @@
 
 		<h2>Wee homepage!</h2>
 
-		<div class="blur pic">
+		<div id="sections">
+			<div class="section group">					
+				<div class="col span_1_of_3">
+						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" width="100%" height="auto" alt="me!" /></a>
+						<h6>about me</h6>
+						<p class="subcaption">about me.</p>
+				</div>
+				<div class="col span_1_of_3">
+					<a class="shrink" href="404.html"><img src="berk.jpg" width="100%" height="auto" alt="Berkeley" /></a>
+					<h6>education and projects</h6>
+					<p class="subcaption">education and projects</p>
+				</div>
+				<div class="col span_1_of_3">
+						<a class="shrink" href="404.html"><img src="pizza.jpg" width="100%" height="auto" alt="Pizza" /></a>
+						<h6>Roma</h6>
+						<p class="subcaption">travels abroad</p>
+				</div>
+			</div>
+		</div>
+
+		<!--<div class="blur pic">
 			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" alt="Me!" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
 		</div>
 
@@ -38,11 +58,9 @@
 
 		<A HREF="404.html"><IMG src="pizza.jpg" align="middle" border="0"  height="228" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;" alt="Pizza"></A>
 		
-		<p style="clear: both;">
+		<p style="clear: both;">-->
 
-		<div class="blur pic">
-			<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
-		</div>
+		<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 
 		<h3>Meow.</h3>
 
