--- a/index.html
+++ b/index.html
@@ -35,17 +35,14 @@
 				<div class="col span_1_of_3">
 						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" width="100%" height="auto" alt="me!" /></a>
 						<h6>about me</h6>
-						<p class="subcaption">about me.</p>
 				</div>
 				<div class="col span_1_of_3">
 					<a class="shrink" href="404.html"><img src="berk.jpg" width="100%" height="auto" alt="Berkeley" /></a>
 					<h6>education and projects</h6>
-					<p class="subcaption">education and projects</p>
 				</div>
 				<div class="col span_1_of_3">
 						<a class="shrink" href="404.html"><img src="pizza.jpg" width="100%" height="auto" alt="Pizza" /></a>
-						<h6>Roma</h6>
-						<p class="subcaption">travels abroad</p>
+						<h6>travels abroad</h6>
 				</div>
 			</div>
 		</div>
