--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 
 		<h2>Wee homepage!</h2>
 
+		<div class="section group">
+			<div class="col span_3_of_3">
+				<div class="navbar">
+					<a class="navbarCurrent" href="index.html">HOME</a>
+					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile">LINKEDIN</a>
+					<a href="https://github.com/jannaerin">GITHUB</a>
+					<a href="GoldenJanna.pdf" target="_blank">RESUME</a>
+				</div>
+			</div>
+		</div>
+
 		<div id="sections">
 			<div class="section group">					
 				<div class="col span_1_of_3">
