--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 
-		<h3>Meow.</h3>
+		<h3>Meow</h3>
 
 	</body>
 </html>
