--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="col span_3_of_3">
 				<div class="navbar">
 					<a class="navbarCurrent" href="index.html" style="color: dimgray; text-decoration: none; font-weight:BOLD">HOME</a>
-					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: #999999; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
+					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
 					<a href="https://github.com/jannaerin" style="color: dimgray; text-decoration: none; font-weight:BOLD">GITHUB</a>
 					<a href="GoldenJanna.pdf" style="color: dimgray; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
 				</div>
