trying to get pix

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">
 
-		<h2>Meow</h2>
+		<h2>Meow.</h2>
 
 	</body>
 </html>
