--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" height="228" width="auto" alt="me!" /></a>
 						<h6>about me</h6>
 				</div>
-				<div class="col span_2_of_3">
+				<div class="col span_1_of_3">
 					<a class="shrink" href="404.html"><img src="berk.jpg" height="228" width="auto" alt="Berkeley" /></a>
 					<h6>education and projects</h6>
 				</div>
-				<div class="col span_3_of_3">
+				<div class="col span_1_of_3">
 						<a class="shrink" href="404.html"><img src="pizza.jpg" height="228"width="auto" alt="Pizza" /></a>
 						<h6>travels abroad</h6>
 				</div>
@@ -69,7 +69,7 @@
 		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Pizza" /></a>
 
-		<h2>Meow</h2>
+		<h2>Meow.</h2>
 
 	</body>
 </html>
