--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Pizza" /></a>
 
-		<h2>Meow.</h2>
+		<h2>Meow</h2>
 
 	</body>
 </html>
