--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h6>education and projects</h6>
 				</div>
 				<div class="col span_1_of_3">
-						<a class="shrink" href="404.html"><img src="rome.jpg" height="auto"width="90%" alt="Pizza2" /></a>
+						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="90%" alt="Pizza2" /></a>
 						<h6>travels abroad</h6>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 		<p style="clear: both;">-->
 
 		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
-		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots /></a>
+		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<h2>Meow.</h2>
 
