--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
 		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
-		<h2>Meow.</h2>
+		<div class="col span_3_of_3">
+			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292;">golden.janna@gmail.com</a></h4>
+		</div>
+
 
 	</body>
 </html>
