--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h6>education and projects</h6>
 				</div>
 				<div class="col span_1_of_3">
-						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="90%" alt="Pizza2" /></a>
+						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="90%"width="90%" alt="Pizza2" /></a>
 						<h6>travels abroad</h6>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292;">golden.janna@gmail.com</a></h4>
+			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h4>
 		</div>
 
 
