--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h4>
+			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h4>
 		</div>
 
 
