--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h6>education and projects</h6>
 				</div>
 				<div class="col span_1_of_3">
-						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="80%"width="80%" alt="Pizza2" /></a>
+						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" /></a>
 						<h6>travels abroad</h6>
 				</div>
 			</div>
