--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 			<div class="section group">					
 				<div class="col span_1_of_3">
 						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" height="auto" width="80%" alt="me!" /></a>
-						<h6>about me</h6>
+						<h2>about me</h2>
 				</div>
 				<div class="col span_1_of_3">
 					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" /></a>
-					<h6>education and projects</h6>
+					<h3>education and projects</h3>
 				</div>
 				<div class="col span_1_of_3">
 						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" /></a>
-						<h6>travels abroad</h6>
+						<h4>travels abroad</h4>
 				</div>
 			</div>
 		</div>
@@ -70,7 +70,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h4>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h4>
+			<h5><style="font-size:10px" © 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h5>
 		</div>
 
 
