--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h5><© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h5>
+			<style>
+				font-size:10px
+			</style>
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h5>
 		</div>
 
 
