--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 			<style>
 				font-size:10px
 			</style>
-			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:10px; margin:0; color:#929292; font-decoration: none">golden.janna@gmail.com</a></h5>
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292;">golden.janna@gmail.com</a></h5>
+
 		</div>
 
 
