--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 		</div>
-
+		<p>&nbsp</p>
 		<div id="sections">
 			<div class="section group">					
 				<div class="col span_1_of_3">
