--- a/index.html
+++ b/index.html
@@ -22,18 +22,14 @@
 		</div>
 		<br>
 		<div id="sections">
-			<div class="section group">					
-				<div class="col span_1_of_3">
-						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" height="auto" width="80%" alt="me!" /></a>
-						<h2>about me</h2>
-				</div>
-				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" /></a>
+			<div class="section group">	
+				<div align="center">				
+					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!"height="auto" width="80%" align="right" style="float:right" /></a>
+					<h2>about me</h2>
+					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" align="left" style="float:left" /></a>
 					<h3>education and projects</h3>
-				</div>
-				<div class="col span_1_of_3">
-						<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" /></a>
-						<h4>travels abroad</h4>
+					<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" align="center" /></a>
+					<h4>travels abroad</h4>
 				</div>
 			</div>
 		</div>
