--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 				</div>
 			</div>
 		</div>
+
 		<br>
+
 		<div id="sections">
 			<div class="section group">	
 				<div align="center">				
@@ -29,7 +31,7 @@
 					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" align="left" style="float:left" /></a>
 					<h3>education and projects</h3>
 					<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" align="center" /></a>
-					<h4>travels abroad</h4>
+					<h4>travels abroad.</h4>
 				</div>
 			</div>
 		</div>
@@ -48,11 +50,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<style>
-				font-size:10px
-			</style>
 			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292;">golden.janna@gmail.com</a></h5>
-
 		</div>
 
 
