--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 		<div id="sections">
 			<div class="section group">	
 				<div align="center">				
-					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!"height="auto" width="80%" align="right" style="float:right" /></a>
+					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" align="right" style="float:right" /></a>
 					<h2>about me</h2>
-					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" align="left" style="float:left" /></a>
+					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" align="left" style="float:left" /></a>
 					<h3>education and projects</h3>
-					<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto"width="80%" alt="Pizza2" align="center" /></a>
-					<h4>travels abroad.</h4>
+					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" align="center" /></a>
+					<h4>travels abroad</h4>
 				</div>
 			</div>
 		</div>
