--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 		<div id="sections">
 			<div class="section group">	
 				<div align="center">				
-					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" align="right" style="float:right" /></a>
+					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!"height="auto" width="80%" /></a>
 					<h2>about me</h2>
-					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" align="left" style="float:left" /></a>
+					<a class="shrink" href="404.html"><img src="berk.jpg" height="auto" width="80%" alt="Berkeley" /></a>
 					<h3>education and projects</h3>
-					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" align="center" /></a>
+					<a class="shrink" href="404.html"><img src="pizza2.jpg" height="auto" width="80%" alt="Pizza2" /></a>
 					<h4>travels abroad</h4>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color:#929292;">golden.janna@gmail.com</a></h5>
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0;">golden.janna@gmail.com</a></h5>
 		</div>
 
 
