--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<a class="shrink" href="404.html"><img src="IMG_5319_2.jpg" align="middle" width="152" height="202.667" alt="Boots" /></a>
 
 		<div class="col span_3_of_3">
-			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0;">golden.janna@gmail.com<style="color: dimgray; text-decoration: none;></a></h5>
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
 		</div>
 
 
