trying to put 3 in line again

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,28 +5,22 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,"/><!--chrome=1-->
         <title>Janna Golden</title>
 	</head>
-<!--<style>
-	body {background-color:white;
-		text-align:center;}
-	#mainContainer {
-		margin:0 auto;
-	}
-	h1 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:200%;
-	}
-	h2 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:150%;
-	}
-	h3 {color:dimgray;
-		font-family: 'Open Sans', sans-serif;
-		font-size:100%;
-	}
-</style>-->
+
 <body>
 	<link rel="stylesheet" href="style.css">
-	<h1>About Me.</h1>
-	<p>i love cats</p>
+		<h1>JANNA GOLDEN</h1>
+
+		<div class="section group">
+			<div class="col span_3_of_3">
+				<div class="navbar">
+					<a class="navbarCurrent" href="index.html" style="color: dimgray; text-decoration: none; font-weight:BOLD">HOME</a>
+					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
+					<a href="https://github.com/jannaerin" style="color: dimgray; text-decoration: none; font-weight:BOLD">GITHUB</a>
+					<a href="GoldenJanna.pdf" style="color: dimgray; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
+				</div>
+			</div>
+		</div>
+
+		<br>
 </body>
 </html>
