trying to put 3 in line again2

--- a/index.html
+++ b/index.html
@@ -22,21 +22,18 @@
 		</div>
 
 		<br>
-		<div class="outer">
 			<div id="sections">
 				<div class="section group">	
-					<div align="center">				
-						<a class="shrink" href="aboutme.html"><img src="aboutme.jpg/304x228" alt="me!" /></a>
+					<div id="image-container">
+						<a class="shrink" href="404.html"><img id="image-right" src="pizza2.jpg/304x228" alt="Pizza2" /></a>
+						<h4>travels abroad</h4>				
+						<a class="shrink" href="aboutme.html"><img id="image-left" src="aboutme.jpg/304x228" alt="me!" /></a>
 						<h2>about me</h2>
-						<a class="shrink" href="404.html"><img src="berk.jpg/304x228" alt="Berkeley" /></a>
+						<a class="shrink" href="404.html"><img id="image-center" src="berk.jpg/304x228" alt="Berkeley" /></a>
 						<h3>education and projects</h3>
-						<a class="shrink" href="404.html"><img src="pizza2.jpg/304x228" alt="Pizza2" /></a>
-						<h4>travels abroad</h4>
-						<span class="fix"></span>
 					</div>
 				</div>
 			</div>
-		</div>
 
 		<!--<div class="blur pic">
 			<A HREF="aboutme.html"><IMG src="IMG_6386.jpg" align="middle" border="0" height="228" alt="Me!" style="float: left; width: 30%; margin-right: 1%;margin-bottom:.5em;"></A>
