trying to put 3 in line again3

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 			<div id="sections">
 				<div class="section group">	
 					<div id="image-container">
-						<a class="shrink" href="404.html"><img id="image-right" src="pizza2.jpg/304x228" alt="Pizza2" /></a>
+						<a class="shrink" href="404.html"><img id="image-right" src="pizza2.jpg" alt="Pizza2" /></a>
 						<h4>travels abroad</h4>				
-						<a class="shrink" href="aboutme.html"><img id="image-left" src="aboutme.jpg/304x228" alt="me!" /></a>
+						<a class="shrink" href="aboutme.html"><img id="image-left" src="aboutme.jpg" alt="me!" /></a>
 						<h2>about me</h2>
-						<a class="shrink" href="404.html"><img id="image-center" src="berk.jpg/304x228" alt="Berkeley" /></a>
+						<a class="shrink" href="404.html"><img id="image-center" src="berk.jpg" alt="Berkeley" /></a>
 						<h3>education and projects</h3>
 					</div>
 				</div>
