--- a/index.html
+++ b/index.html
@@ -22,19 +22,14 @@
 		</div>
 
 		<br>
-		<div id="image-container">
-			<div id="sections">
-				<div class="section group">	
-					<div align="center">
-						<a class="shrink" href="404.html"><img src="pizza2.jpg/304x228" alt="Pizza2" /></a>
-						<h4>travels abroad</h4>				
-						<a class="shrink" href="aboutme.html"><img id="image-left" src="aboutme.jpg/304x228" alt="me!" /></a>
-						<h2>about me</h2>
-						<a class="shrink" href="404.html"><img src="berk.jpg/304x228" alt="Berkeley" /></a>
-						<h3>education and projects</h3>
-						<span class="fix"></span>
-					</div>
-				</div>
+		<div id="sections">
+			<div class="section group">				
+					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" height="auto" width="80%" /></a>
+					<h2>about me</h2>
+					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" height="auto" width="80%" /></a>
+					<h3>education and projects</h3>
+					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" height="auto" width="80%" /></a>
+					<h4>travels abroad</h4>	
 			</div>
 		</div>
 
