--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,18 @@
 				</div>
 			</div>
 		</div>
-
+		
 		<br>
+
+		<h2>About Me</h2>
+		<div class="person1" style="float:left; display:inline-block; ">
+			<span style="float:left;width:20%;">
+				<img src="senior.jpg" width="213.33" height="320" />
+			</span>
+			<span style="float:right; width:80%;">
+				<p style="float:right; display:block;">I hail from San Diego, California and am currently a third year at UC Berkeley studying computer science and cognitive science.  I'm about to embark on a semester abroad in Rome!
+				</p>
+			</span>
+		</div>
 </body>
 </html>
