--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<div class="section group">
 			<div class="col span_3_of_3">
 				<div class="navbar">
-					<a class="navbarCurrent" href="index.html" style="color: dimgray; text-decoration: none; font-weight:BOLD">HOME</a>
-					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
-					<a href="https://github.com/jannaerin" style="color: dimgray; text-decoration: none; font-weight:BOLD">GITHUB</a>
-					<a href="GoldenJanna.pdf" style="color: dimgray; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
+					<a class="navbarCurrent" href="index.html" style="color: dimgray; text-align:center; text-decoration: none; font-weight:BOLD">HOME</a>
+					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; text-align:center; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
+					<a href="https://github.com/jannaerin" style="color: dimgray; text-align:center; text-decoration: none; font-weight:BOLD">GITHUB</a>
+					<a href="GoldenJanna.pdf" style="color: dimgray; text-align:center; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
 				</div>
 			</div>
 		</div>
