--- a/aboutme.html
+++ b/aboutme.html
@@ -25,10 +25,10 @@
 
 		<h2>About Me</h2>
 		<div class="person1" style="float:left; display:inline-block; ">
-			<span style="float:left;width:20%;">
+			<span style="float:left;width:20%; margin-left:5em;">
 				<img src="senior.jpg" width="213.33" height="320" />
 			</span>
-			<span style="float:right; width:80%;">
+			<span style="float:right; width:80%; margin-left:5em; margin-right:5em;">
 				<p style="float:right; display:block;">I hail from San Diego, California and am currently a third year at UC Berkeley studying computer science and cognitive science.  I'm about to embark on a semester abroad in Rome!
 				</p>
 			</span>
