--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 	</head>
 
 <body>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styleaboutme.css">
 		<h1>JANNA GOLDEN</h1>
 
 		<div class="section group">
@@ -28,7 +28,7 @@
 			<span style="float:left;width:20%; margin-left:5em;">
 				<img src="senior.jpg" width="213.33" height="320" />
 			</span>
-			<span style="float:right; width:80%; margin-left:5em; margin-right:5em;">
+			<span style="float:right; width:80%; margin-right:5em;">
 				<p style="float:right; display:block;">I hail from San Diego, California and am currently a third year at UC Berkeley studying computer science and cognitive science.  I'm about to embark on a semester abroad in Rome!
 				</p>
 			</span>
