--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
 			<span style="float:left;width:20%; margin-left:5em;">
 				<img src="senior.jpg" width="213.33" height="320" />
 			</span>
-			<span style="float:right; width:80%; margin-right:5em;">
+			<span style="float:right; width:80%;">
 				<p style="float:right; display:block;">I hail from San Diego, California and am currently a third year at UC Berkeley studying computer science and cognitive science.  I'm about to embark on a semester abroad in Rome!
 				</p>
 			</span>
