--- a/aboutme.html
+++ b/aboutme.html
@@ -23,7 +23,7 @@
 
 		<br>
 
-		<h2>About Me</h2>
+		<h2>ABOUT ME</h2>
 		<div class="person1" style="float:left; display:inline-block; ">
 			<span style="float:left;width:20%; margin-left:5em;">
 				<img src="senior.jpg" width="320" height="480" />
