--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,6 @@
 			</div>
 		</div>
 
-		<br>
-
 		<h2>ABOUT ME</h2>
 
 		<br>
@@ -36,6 +34,9 @@
 			</span>
 		</div>
 
-		<br>
+		<div class="col span_3_of_3">
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+		</div>
+		
 </body>
 </html>
