--- a/aboutme.html
+++ b/aboutme.html
@@ -13,10 +13,10 @@
 		<div class="section group">
 			<div class="col span_3_of_3">
 				<div class="navbar">
-					<a class="navbarCurrent" href="index.html" style="color: dimgray; font-size:20px; text-decoration: none; font-weight:BOLD">HOME</a>
-					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; font-size: 20px; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
-					<a href="https://github.com/jannaerin" style="color: dimgray; text-decoration: none; font-size: 20px; font-weight:BOLD">GITHUB</a>
-					<a href="GoldenJanna.pdf" style="color: dimgray; font-size: 20px; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
+					<a class="navbarCurrent" href="index.html" style="color: gray; font-size:20px; text-decoration: none; font-weight:BOLD">HOME</a>
+					<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: gray; font-size: 20px; text-decoration: none; font-weight:BOLD">LINKEDIN</a>
+					<a href="https://github.com/jannaerin" style="color: gray; text-decoration: none; font-size: 20px; font-weight:BOLD">GITHUB</a>
+					<a href="GoldenJanna.pdf" style="color: gray; font-size: 20px; text-decoration: none; font-weight:BOLD" target="_blank">RESUME</a>
 				</div>
 			</div>
 		</div>
@@ -35,7 +35,7 @@
 		</div>
 
 		<br>
-		
+
 		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
 
 
