--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		<div class="section group">
 			<div class="navbar">
-				<a class="navbarCurrent" href="index.html" style="color: dimgray; font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
-				<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="color: dimgray; text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD">LINKEDIN</a>
-				<a href="https://github.com/jannaerin" style="color: dimgray; text-decoration: none; color:gray; font-size: 20px; font-weight:BOLD">GITHUB</a>
-				<a href="GoldenJanna.pdf" style="color: dimgray; text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
+				<a class="navbarCurrent" href="index.html" style="font-size: 20px; color:gray; text-decoration: none; font-weight:BOLD">HOME</a>
+				<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD">LINKEDIN</a>
+				<a href="https://github.com/jannaerin" style="text-decoration: none; color:gray; font-size: 20px; font-weight:BOLD">GITHUB</a>
+				<a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
 			</div>
 		</div>
 
