--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
 		<h2>ABOUT ME</h2>
 
 		<br>
-		
+
 		<div class="person1" style="float:left; display:inline-block; ">
 			<span style="float:left;width:20%; margin-left:5em;">
 				<img src="senior.jpg" width="320" height="480" />
@@ -35,10 +35,7 @@
 			</span>
 		</div>
 
-		<br>
-		<br>
-
-		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
 
 
 </body>
