--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:50%; margin-right:5em;">
-				<p style="float:right; display:block;">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue" target="_blank">here</a>)
+				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
 				</p>
 			</span>
 		</div>
