--- a/aboutme.html
+++ b/aboutme.html
@@ -26,12 +26,15 @@
 		<br>
 
 		<div class="person1" style="float:left; display:inline-block; ">
-			<span style="float:left;width:20%; margin-left:10em;">
+			<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
 				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
 				</p>
+				<br>
+				<p style="float:right; display:block; font-weight:BOLD">Currently listening to: alt-J</p>
+				<p style="float:right; display:block; font-weight:BOLD">Currently drinking: Americano</p>
 			</span>
 		</div>
 
