about me again13

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,11 +34,12 @@
 				</p>
 				<br>
 				<p style="float:right; display:block; font-weight:BOLD">Currently listening to: alt-J</p>
+				<br>
 				<p style="float:right; display:block; font-weight:BOLD">Currently drinking: Americano</p>
 			</span>
 		</div>
 
-		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
 
 
 </body>
