--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<!--<img src="IMG_5319_2.jpg" align="middle" height="202.667" width="152" alt="Boots"><p style="clear: both;">-->
 
 		<div class="col span_3_of_3">
-			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: dimgray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+			<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
 		</div>
 
 
