--- a/aboutme.html
+++ b/aboutme.html
@@ -31,11 +31,10 @@
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
 				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
+				<br>
+				Currently listening to: alt-J
+				Currently drinking: Americano
 				</p>
-				<br>
-				<p style="float:right; display:block; font-weight:BOLD">Currently listening to: alt-J</p>
-				<br>
-				<p style="float:right; display:block; font-weight:BOLD">Currently drinking: Americano</p>
 			</span>
 		</div>
 
