about me again17

--- a/aboutme.html
+++ b/aboutme.html
@@ -30,12 +30,11 @@
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<pre><span style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
-
-
+				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
+				<br />
 				Currently listening to: alt-J
 				Currently drinking: Americano
-				</span></pre>
+			</p>
 			</span>
 		</div>
 
