about me again20

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,9 +34,10 @@
 			</span>
 			<br>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; display:block;">Currently listening to: alt-J</p>
+				<p style="float:right; text-align:right; display:block;">Currently listening to: alt-J</p>
+			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; display:block;">Currently drinking: Americano</p>
+				<p style="float:right; text-align:right; display:block;">Currently drinking: Americano</p>
 			</span>
 		</div>
 
