--- a/aboutme.html
+++ b/aboutme.html
@@ -33,11 +33,12 @@
 				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
 			</span>
 			<br>
+			<br>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; text-align:right; display:block;">Currently listening to: alt-J</p>
+				<p style="float:right; text-align:left; display:block;">Currently listening to: alt-J</p>
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; text-align:right; display:block;">Currently drinking: Americano</p>
+				<p style="float:right; text-align:left; display:block;">Currently drinking: Americano</p>
 			</span>
 		</div>
 
