about me again22

--- a/aboutme.html
+++ b/aboutme.html
@@ -35,10 +35,10 @@
 			<br>
 			<br>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; text-align:left; display:block;">Currently listening to: alt-J</p>
+				<p style="float:right; align:left; display:block; font-weight:BOLD; font-size: 12px">Currently listening to: alt-J</p>
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; text-align:left; display:block;">Currently drinking: Americano</p>
+				<p style="float:right; align:left; display:block; font-weight:BOLD; font-size: 12px">Currently drinking: Americano</p>
 			</span>
 		</div>
 
