--- a/aboutme.html
+++ b/aboutme.html
@@ -35,7 +35,7 @@
 			<br>
 			<br>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<pre><span style="float:right; align:left; display:block; font-weight:BOLD; font-size: 12px">
+				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
 				Currently listening to: alt-J
 				Currently drinking: Americano</span></pre>
 			</span>
