--- a/404.html
+++ b/404.html
@@ -12,5 +12,9 @@ title: 404
 	<h1>Cats!</h1>
 	<img src="zBjW9.jpg" alt ="Oops" align="middle" height="228" width="304" alt="oops cat">
 	<h2>This page doesn't exist (yet).</h2>
+
+	<div class="col span_3_of_3">
+		<h3>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
+	</div>
 </body>
 </html>
