--- a/aboutme.html
+++ b/aboutme.html
@@ -30,18 +30,19 @@
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain/mind inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
+				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
+				Currently listening to: alt-J
+				Currently drinking: Americano</span></pre>
 			</span>
 			<br>
 			<br>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
-				  Currently listening to: alt-J
-				Currently drinking: Americano</span></pre>
+				<p style="float:right; display:block; font-weight:BOLD">I'm currently a third year at UC Berkeley studying computer science and cognitive science.  I'm an eager explorer, ardent learner, brain inquirer, music enthusiast, and coffee devotee orignially hailing from San Diego, California.  I'm about to embark on a semester abroad in Rome! (You can check out my blog <a class="links" href="404.html" style="text-decoration: none; color: midnightblue; font-weight:BOLD" target="_blank">here</a>)
 			</span>
+			
 		</div>
 
-		<h5>© 2014 Janna Golden | <a href="email:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h5>
+		<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
 
 
 </body>
