--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
 			<span style="float:right; width:40%; margin-right:10em;">
-				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
+				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; align: left; font-weight:BOLD; font-size: 15px">
 				Currently listening to: alt-J
 				Currently drinking: Americano</span></pre>
 			</span>
