--- a/aboutme.html
+++ b/aboutme.html
@@ -29,8 +29,8 @@
 			<span style="float:left;width:20%; margin-left:10em; padding-bottom:1em">
 				<img src="senior.jpg" width="320" height="480" />
 			</span>
-			<span style="float:right; width:40%; margin-right:10em;">
-				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; align: left; font-weight:BOLD; font-size: 15px">
+			<span style="float:right; width:40%; align: left; margin-right:10em;">
+				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
 				Currently listening to: alt-J
 				Currently drinking: Americano</span></pre>
 			</span>
