--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
 
 		<br>
 		<div id="sections">
-			<div class="section group">				
-					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" height="288" width="304" /></a>
+			<div class="section group">	
+				<div class="col span_1_of_3">			
+					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" width="100%" height="auto" /></a>
 					<h2>about me</h2>
-					<br>
-					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" height="288" width="304" /></a>
+				</div>
+				<div class="col span_1_of_3">
+					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" width="100%" height="auto" /></a>
 					<h3>education and projects</h3>
-					<br>
-					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" height="288" width="304" /></a>
+				</div>
+				<div class="col span_1_of_3">
+					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" width="100%" height="auto" /></a>
 					<h4>travels abroad</h4>	
-					<br>
+				</div>
 			</div>
 		</div>
 
