--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="aboutme.jpg" alt="me!" width="100%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="aboutme2.jpg" alt="me!" width="100%" height="auto" /></a>
 					<h2>about me</h2>
 				</div>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berk.jpg" alt="Berkeley" width="100%" height="auto" /></a>
+					<a class="shrink" href="404.html"><img src="berk2.jpg" alt="Berkeley" width="100%" height="auto" /></a>
 					<h3>education and projects</h3>
 				</div>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="pizza2.jpg" alt="Pizza2" width="100%" height="auto" /></a>
+					<a class="shrink" href="404.html"><img src="rome2.jpg" alt="Pizza2" width="100%" height="auto" /></a>
 					<h4>travels abroad</h4>	
 				</div>
 			</div>
