--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,9 @@
 			
 		</div>
 
-		<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; padding-top:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
+		<div class="col span_3_of_3">
+			<h3>© 2014 Janna Golden | <a href="malito:golden.janna@gmail.com" style="font-size:1em; margin:0; color: gray; text-decoration: none;">golden.janna@gmail.com </a></h3>
+		</div>
 
 
 </body>
