--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
 			</span>
 			<span style="float:right; width:40%; align: left; margin-right:10em;">
 				<pre><span style="float:right; font-family: 'Open Sans', sans-serif; display:block; font-weight:BOLD; font-size: 15px">
-				&nbsp;&nbsp;Currently listening to: alt-J
+				&nbsp;&nbsp;&nbsp;Currently listening to: alt-J
 				Currently drinking: Americano</span></pre>
 			</span>
 			<br>
