--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="jump.jpg" alt="me!" width="100%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="aboutmepic.jpg" alt="me!" width="100%" height="auto" /></a>
 					<h2>about me</h2>
 				</div>
 				<br>
