making blog wee

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="http://wp.me/5BxsJ"><img src="roma2.jpg" alt="pontegaribaldi" width="100%" height="auto" /></a>
+					<a class="shrink" href="blog.html"><img src="roma2.jpg" alt="pontegaribaldi" width="100%" height="auto" /></a>
 					<h4>travels abroad</h4>	
 				</div>
 				<br>
