making blog wee2

--- a/school.html
+++ b/school.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<link rel="stylesheet" href="styleblog.css">
+		<link rel="stylesheet" href="style.css">
 		<h1>JANNA GOLDEN</h1>
 
 		<div class="section group">
@@ -18,7 +18,3 @@
 				<a href="GoldenJanna.pdf" style="text-decoration: none; font-size: 20px; color:gray; font-weight:BOLD" target="_blank">RESUME</a>
 			</div>
 		</div>
-
-		<h2>Travels Abroad</h2>
-		<br>
-
