making blog wee3

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 		<div id="sections">
 			<div class="section group">	
 				<div class="col span_1_of_3">			
-					<a class="shrink" href="aboutme.html"><img src="jump.jpg" alt="me!" width="100%" height="auto" /></a>
+					<a class="shrink" href="aboutme.html"><img src="jump!.jpg" alt="me!" width="60%" height="auto" /></a>
 					<h2>about me</h2>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="404.html"><img src="berkwee.jpg" alt="Berkeley" width="100%" height="auto" /></a>
+					<a class="shrink" href="404.html"><img src="berk!.jpg" alt="Berkeley" width="60%" height="auto" /></a>
 					<h3>education and projects</h3>
 				</div>
 				<br>
 				<div class="col span_1_of_3">
-					<a class="shrink" href="blog.html"><img src="roma2.jpg" alt="pontegaribaldi" width="100%" height="auto" /></a>
+					<a class="shrink" href="blog.html"><img src="roma!.jpg" alt="pontegaribaldi" width="60%" height="auto" /></a>
 					<h4>travels abroad</h4>	
 				</div>
 				<br>
