--- a/blog.html
+++ b/blog.html
@@ -21,5 +21,6 @@
 
 		<h2>Travels Abroad</h2>
 		<br>
-		<h3>Week (and a half) One</h3>
+		<h3>WEEK (AND A HALF) ONE</h3>
+		<p>After a week and a half in Rome I've finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below describes my last 11 days in my new home for the next four months, Rome.</p>
 
