--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 
 		<h2>Travels Abroad</h2>
 		<br>
-		<HR WIDTH="80%">
+		<HR COLOR = "dimgray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Here is an overview of my first 11 days in my new home for the next four months.</p>
 
