--- a/blog.html
+++ b/blog.html
@@ -24,9 +24,18 @@
 		<HR COLOR = "gray" WIDTH="80%">
 		<h3>MY FIRST WEEK (AND A HALF)</h3>
 		<p>After a week and a half in Rome I finally had time to start writing (aka mostly posting pictures and writing bullet points)! Below is an overview of my first 11 days in my home for the next four months.</p>
-			<p style="marigin-right: 8em"> • SAN->ATL->FCO</p>
-			<p style="marigin-right: 8em">• Arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)</p>
-			<p style="marigin-right: 8em">• Raychel ended up being my roommate!</p>
+			<p style="marigin-right: 10em">Various adventures during my first week and a half:</p>
+			<p style="marigin-right: 13em">• I arrived in Rome with all my luggage (contrary to my parents worry that my luggage would be stolen)!</p>
+			<p style="marigin-right: 13em">• We live in Trastevere and school is across the river so we get to look at the beautiful (see below) view everyday</p>
+			<p style="marigin-right: 13em">• Baroque walking tour with one of our professors (we learned about two piazzas)</p>
+			<p style="marigin-right: 10em">• Visits to the Pantheon (a six minute walk from my school), Spanish Steps, Piazza Navona, Trevi Fountain (currently under rennovation), Vatican Museums, and St. Peter's Basillica, farmer's markets </p>
+			<p style="marigin-right: 10em">• An Italian cooking class (we made fresh pasta) </p>
+			<p style="marigin-right: 10em">• Lots of pizza lunches and dinners and gelato</p>
+			<p style="marigin-right: 10em">Things I've learned about Rome:</p>
+			<p style="marigin-right: 13em">• Coffee on the go is NOT a thing here although a few places advertise "American Coffe To-Go" so I've had to get used to downing a quick caffè (espresso shot) or caffè americano (much smaller version of my usual americano)</p>
+			<p style="marigin-right: 13em">• Long walks on cobblestone streets cause pain in all parts of your body (especially feet)</p>
+			<p style="marigin-right: 13em">• You will stumble upon ruins during nearly any given walk</p>
+			<p style="marigin-right: 13em">• Gelato is not the same everywhere!</p>
 
 			<span style="float:left; width:40%; margin-left:6em; padding-bottom:1em">
 				<img src="forblog/IMG_6750.jpg" width="480" height="600" alt="passport"/>
